k8s/service.yaml
apiVersion: v1
kind: Service 

metadata: 
  name: fastapi-service

spec:
  type: NodePort
  selector:
    app: fastapi
  ports:
    - port: 8000        # service port in cluster
      targetPort: 8000  # fastapi container port
      nodePort: 30007   # fixed NodePort (allowed range)
