k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: fastapi.local
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: fastapi-service
                port:   
                  number: 8000
